# AB-Rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: docker-image.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs  settings.rs  state.rs  web.rs
crates/app/templates/admin/: assets.html  base.html  cloak.html  dashboard.html  domains.html  landing.html  landing_preview.html  login.html  meta.html  placeholder.html  promo_form.html  promos.html  route_form.html  routes.html  settings.html  templates.html  visits.html
crates/app/templates/landing/: default.html  not_configured.html  template_frame.html
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/services/: Cargo.toml
crates/services/src/: assets.rs  auth.rs  cloak.rs  geo.rs  health.rs  lib.rs  meta.rs  promos.rs  resources.rs  routes.rs  stats.rs  templates.rs  visits.rs
deploy/: Caddyfile  Dockerfile  active_proxy.conf  active_tls_ask.conf  docker-compose.yml
migrations/: 202607010001_initial.sql  202607010002_meta_event_queue.sql  202607010003_ip_geo_ranges.sql  202607010004_meta_processing_status.sql  202607010005_meta_event_archive.sql  202607010006_download_event_dedup.sql  202607010007_resource_profiles.sql  202607010008_clear_default_disabled_profile_bindings.sql  202607010009_cloak_asn_ptr.sql  202607010010_cloak_default_asn.sql  202607010011_backfill_route_domains.sql
ops/: README.md  abctl.sh  apkctl.sh  backup.ps1  convert_maxmind_csv.py  deploy.ps1  import_ip_geo_csv.py  import_legacy_sqlite.py  install.sh  release.ps1  smoke.ps1  status.ps1  update_maxmind_geo.ps1  validate-env.ps1
static/: admin.css
