[workspace]
members = [
  "crates/app",
  "crates/domain",
  "crates/db",
  "crates/services",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
askama = "0.12"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
headers = "0.4"
http = "1.2"
mime_guess = "2.0"
maxminddb = { version = "0.28.1", default-features = false }
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17"
rust_decimal = { version = "1.36", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "rust_decimal"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "signal", "fs", "net", "time"] }
tower = "0.5"
tower-cookies = "0.10"
tower-http = { version = "0.6", features = ["compression-full", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1.11", features = ["serde", "v7"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
