[package]
name = "ab-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ab-db = { path = "../db" }
ab-services = { path = "../services" }
anyhow.workspace = true
askama.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
headers.workspace = true
http.workspace = true
mime_guess.workspace = true
ring.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower-cookies.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
