[package]
name = "ab-services"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ab-db = { path = "../db" }
ab-domain = { path = "../domain" }
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
chrono.workspace = true
mime_guess.workspace = true
password-hash.workspace = true
rand_core.workspace = true
reqwest.workspace = true
ring.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
zip.workspace = true
